--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,7 @@
 
 :root {
   --primary: #1f3e72;
-  --secondary: rgba(255, 255, 255, 0.78);
+  --secondary: #ffffffc7;
   --black: #131110;
   --blue-gradient: linear-gradient(97.05deg, #4066ff 3.76%, #2949c6 100%);
   --orange-gradient: linear-gradient(270deg, #ffb978 0%, #ff922d 100%);
@@ -75,13 +75,29 @@ a {
 }
 
 .secondaryText {
-  color: rgb(140 139 139);
+  color: #8c8b8b;
   font-size: 0.9rem;
 }
 .orangeText {
-  color: orange;
+  color: #ffa500;
   font-size: 1.5rem;
   font-weight: 600;
+}
+
+.button {
+  font-weight: 500;
+  padding: 0.6rem 1.4rem;
+  color: #fff;
+  background: var(--blue-gradient);
+  border: none;
+  border-radius: 4px;
+
+  transition: all 300ms ease;
+}
+
+.button:hover {
+  cursor: pointer;
+  transform: scale(1.1);
 }
 
 /* media queries */
